--------------------------------------------------------------------------------
drkns 23.12.2021 22:36:54 +0000 - build 5946

1. gh-502: Another parentheses-related issue.

--------------------------------------------------------------------------------
drkns 23.12.2021 17:28:03 +0000 - build 5945

1. gh-502: Removal of Parenthesis from a User Variable Initial Value in F2 User Command.

2. Minor refactoring & tests.

--------------------------------------------------------------------------------
drkns 23.12.2021 02:14:27 +0000 - build 5944

1. FS monitoring rework (again).
   Now only one extra thread.

--------------------------------------------------------------------------------
drkns 22.12.2021 20:00:38 +0000 - build 5943

1. Delay load config DBs.

--------------------------------------------------------------------------------
drkns 22.12.2021 02:14:35 +0000 - build 5942

1. Continue 5890: fuzzy search is now optional.
   It can be activated with the third state of the "Case sensitive" option in dialogs.

--------------------------------------------------------------------------------
drkns 22.12.2021 00:17:17 +0000 - build 5941

1. Refactoring.

2. Add a help page for sort criteria.

--------------------------------------------------------------------------------
drkns 19.12.2021 13:30:58 +0000 - build 5940

1. Continue 5938.

--------------------------------------------------------------------------------
drkns 18.12.2021 03:37:55 +0000 - build 5939

1. Alternative NTSTATUS accessing.

--------------------------------------------------------------------------------
drkns 18.12.2021 01:09:04 +0000 - build 5938

1. FS monitoring rework (again).
   "System settings - Update panels only when Far is active" is no longer needed and removed.

--------------------------------------------------------------------------------
drkns 15.12.2021 16:24:56 +0000 - build 5937

1. Data alignment corrections.
