@@ -51,7 +51,7 @@ THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 struct execute_info
 {
 	enum class wait_mode { no_wait, if_needed, wait_finish };
-	enum class source_mode { unknown, known, known_executable };
+	enum class source_mode { unknown, known, known_executable, known_external };
 	enum class echo { disabled, enabled, ignored };
 
 	string Command;
