@@ -1,4 +1,9 @@
 --------------------------------------------------------------------------------
+drkns 25.12.2021 16:27:10 +0000 - build 5947
+
+1. Fix URLs processing in Help.
+
+--------------------------------------------------------------------------------
 drkns 23.12.2021 22:36:54 +0000 - build 5946
 
 1. gh-502: Another parentheses-related issue.
